Completed all features

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,9 @@ button {
   border-radius: 5px;
   font-size: var(--font-size-medium);
 }
-
+.btn__reset:hover{
+  cursor: pointer;
+}
 /* Overlay */
 
 #overlay {
